[gd_scene load_steps=23 format=2]

[ext_resource path="res://src/items/interface/PokemonHandBook.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/handbook/squirtle.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/miscellaneous/handbookBackGround.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/pokemon Battle/dialog_box.png" type="Texture" id=4]
[ext_resource path="res://src/items/interface/transaction/SelectArrow.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/pokemon fonts/Pokemon-FRLG.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/sprites/handbook/bulbasaur.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/handbook/grimer.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/handbook/pikachu.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/handbook/charmander.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/handbook/pidgey.png" type="Texture" id=11]
[ext_resource path="res://src/items/interface/PokemonDetailedInfo.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/ui/PokemonAttributes/type11.png" type="Texture" id=13]
[ext_resource path="res://assets/ui/PokemonAttributes/type12.png" type="Texture" id=14]
[ext_resource path="res://assets/ui/PokemonAttributes/type9.png" type="Texture" id=15]
[ext_resource path="res://assets/ui/PokemonAttributes/type3.png" type="Texture" id=16]
[ext_resource path="res://assets/ui/PokemonAttributes/type0.png" type="Texture" id=17]
[ext_resource path="res://assets/ui/PokemonAttributes/type2.png" type="Texture" id=18]
[ext_resource path="res://assets/ui/PokemonAttributes/type10.png" type="Texture" id=19]
[ext_resource path="res://src/items/interface/AttributeImages.gd" type="Script" id=20]

[sub_resource type="DynamicFont" id=1]
size = 59
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 6 )

[node name="PokemonHandbook" type="CanvasLayer"]
layer = 3
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackGround" type="TextureRect" parent="Control"]
margin_right = 750.0
margin_bottom = 750.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/BackGround"]
margin_left = 42.0
margin_top = 71.0
margin_right = 719.0
margin_bottom = 157.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
text = "Pokemon HandBook"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfileList" type="Control" parent="Control"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect" type="TextureRect" parent="Control/ProfileList"]
margin_left = 50.0
margin_top = 225.0
margin_right = 250.0
margin_bottom = 425.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="Control/ProfileList"]
margin_left = 90.0
margin_top = 240.0
margin_right = 210.0
margin_bottom = 360.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Control/ProfileList"]
margin_left = 70.0
margin_top = 373.0
margin_right = 244.0
margin_bottom = 410.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
text = "Bulbasaur"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect2" type="TextureRect" parent="Control/ProfileList"]
margin_left = 275.0
margin_top = 225.0
margin_right = 475.0
margin_bottom = 425.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon2" type="TextureRect" parent="Control/ProfileList"]
margin_left = 315.0
margin_top = 240.0
margin_right = 435.0
margin_bottom = 360.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name2" type="Label" parent="Control/ProfileList"]
margin_left = 282.0
margin_top = 374.0
margin_right = 490.0
margin_bottom = 417.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
text = "Charmander"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect3" type="TextureRect" parent="Control/ProfileList"]
margin_left = 500.0
margin_top = 225.0
margin_right = 700.0
margin_bottom = 425.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon3" type="TextureRect" parent="Control/ProfileList"]
margin_left = 540.0
margin_top = 240.0
margin_right = 660.0
margin_bottom = 360.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name3" type="Label" parent="Control/ProfileList"]
margin_left = 526.0
margin_top = 376.0
margin_right = 692.0
margin_bottom = 416.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
text = "Squirtle"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect4" type="TextureRect" parent="Control/ProfileList"]
margin_left = 50.0
margin_top = 475.0
margin_right = 250.0
margin_bottom = 675.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon4" type="TextureRect" parent="Control/ProfileList"]
margin_left = 90.0
margin_top = 490.0
margin_right = 210.0
margin_bottom = 610.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name4" type="Label" parent="Control/ProfileList"]
margin_left = 71.0
margin_top = 623.0
margin_right = 234.0
margin_bottom = 664.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
text = "Pikachu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect5" type="TextureRect" parent="Control/ProfileList"]
margin_left = 275.0
margin_top = 475.0
margin_right = 475.0
margin_bottom = 675.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon5" type="TextureRect" parent="Control/ProfileList"]
margin_left = 315.0
margin_top = 490.0
margin_right = 435.0
margin_bottom = 610.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name5" type="Label" parent="Control/ProfileList"]
margin_left = 319.0
margin_top = 624.0
margin_right = 444.0
margin_bottom = 664.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
text = "Pidgey"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect6" type="TextureRect" parent="Control/ProfileList"]
margin_left = 500.0
margin_top = 475.0
margin_right = 700.0
margin_bottom = 675.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon6" type="TextureRect" parent="Control/ProfileList"]
margin_left = 540.0
margin_top = 490.0
margin_right = 660.0
margin_bottom = 610.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name6" type="Label" parent="Control/ProfileList"]
margin_left = 545.0
margin_top = 624.0
margin_right = 669.0
margin_bottom = 659.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
text = "Grimer
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PokemonDetailedInfo" parent="Control" instance=ExtResource( 12 )]

[node name="Label" parent="Control/PokemonDetailedInfo/FurtherDetailedInfo/Control/AttributeList/Description" index="0"]
autowrap = true

[node name="Profile" parent="Control/PokemonDetailedInfo/FurtherDetailedInfo/Control" index="2"]
margin_left = -51747.6
margin_top = 7364.72
margin_right = -68495.2
margin_bottom = 1939.6

[node name="SelectArrow" parent="." instance=ExtResource( 5 )]
margin_left = 45.0
margin_top = 320.0
margin_right = 97.0
margin_bottom = 458.0

[node name="Sprite" parent="SelectArrow" index="0"]
position = Vector2( 0, 0 )
scale = Vector2( 0.491803, 0.6 )

[node name="AttributeImages" type="Control" parent="."]
visible = false
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grass" type="TextureRect" parent="AttributeImages"]
margin_left = -5.0
margin_top = -40.0
margin_right = 35.0
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Poison" type="TextureRect" parent="AttributeImages"]
margin_left = -5.0
margin_top = -40.0
margin_right = 35.0
texture = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fire" type="TextureRect" parent="AttributeImages"]
margin_left = -5.0
margin_top = -40.0
margin_right = 35.0
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Water" type="TextureRect" parent="AttributeImages"]
margin_left = -5.0
margin_top = -40.0
margin_right = 35.0
texture = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Normal" type="TextureRect" parent="AttributeImages"]
margin_left = -5.0
margin_top = -40.0
margin_right = 35.0
texture = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flying" type="TextureRect" parent="AttributeImages"]
margin_left = -5.0
margin_top = -40.0
margin_right = 35.0
texture = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Electirc" type="TextureRect" parent="AttributeImages"]
margin_left = -5.0
margin_top = -40.0
margin_right = 35.0
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[editable path="Control/PokemonDetailedInfo"]
[editable path="SelectArrow"]
